# conan-flac

./: .travis.yml  CMakeLists.txt  FindFLAC++.cmake  FindFLAC.cmake  README.md  appveyor.yml  build.py  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  testpkg.c  testpkg.cpp
